# vec-array

./: Cargo.toml  README.md
src/: lib.rs
